tests/baselines/reference/extendGlobalThis.errors.txt
index.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of './extention'.


==== extension.d.ts (0 errors) ====
    declare global {
        namespace globalThis  {
            var test: string;
        }
    }
    
    export {}
    
==== index.ts (1 errors) ====
    import "./extention";
           ~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of './extention'.
    
    globalThis.tests = "a-b";
    console.log(globalThis.test.split("-"));
    